--- a/fm2qn/.project
+++ b/fm2qn/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>famaCode</name>
+	<name>fm2qn</name>
 	<comment></comment>
 	<projects>
 	</projects>
